--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ starting-code/.idea/caches/
 starting-code/.idea/libraries/
 starting-code/.gradle
 starting-code/app/build
+final-code/.idea/caches/
+final-code/.idea/libraries/
+final-code/.gradle
+final-code/app/build
