--- a/final-code/app/src/main/AndroidManifest.xml
+++ b/final-code/app/src/main/AndroidManifest.xml
@@ -44,4 +44,5 @@ limitations under the License.
 
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
